--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,6 +12,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: JosephJvB/metrics@34fc72382dfc64b1a8bd53a48add9a4b6ee2f6d0
+      - uses: JosephJvB/metrics@main
         with:
           token: ${{ secrets.METRICS_TOKEN }}
